package com.aps.eduflow.domain.enums;

public enum SessionStatus {
    AGENDADO,
    REALIZADO_PENDENTE,
    VALIDADO,
    REJEITADO,
    CANCELADO
}
