package com.aps.eduflow.domain.enums;

public enum UserRole {
    ADMIN,
    PROFESSOR,
    MONITOR,
    ALUNO
}
